--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -108,46 +108,46 @@ jobs:
           name: frontend-dist
           path: frontend/dist
 
-  # Docker Build & Push
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: [backend, frontend]
-    if: github.ref == 'refs/heads/main'
+  # Docker Build & Push (Disabled - configure DOCKER_USERNAME and DOCKER_PASSWORD secrets to enable)
+  # docker-build:
+  #   runs-on: ubuntu-latest
+  #   needs: [backend, frontend]
+  #   if: github.ref == 'refs/heads/main'
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push backend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:latest
-            ${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:buildcache,mode=max
+  #     - name: Build and push backend image
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./backend
+  #         push: true
+  #         tags: |
+  #           ${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:latest
+  #           ${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:${{ github.sha }}
+  #         cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:buildcache
+  #         cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-backend:buildcache,mode=max
 
-      - name: Build and push frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:latest
-            ${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:buildcache,mode=max
+  #     - name: Build and push frontend image
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./frontend
+  #         push: true
+  #         tags: |
+  #           ${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:latest
+  #           ${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:${{ github.sha }}
+  #         cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:buildcache
+  #         cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/vpn-detector-frontend:buildcache,mode=max
 
   # Security Scanning
   security:
